--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
-google-generativeai==2.25.1
-google-api-core==0.8.5
-python-dotenv==1.1.1
+google-generativeai
+google-api-core
+python-dotenv
+Flask
