--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-google-generativeai
-google-api-core
-python-dotenv
-Flask
-OpenCC
+google-generativeai==0.8.5
+google-genai == 1.45.0
+google-api-core==2.25.1
+python-dotenv==1.1.1
+Flask==3.1.1
+OpenCC==1.1.9
